--- a/index.html
+++ b/index.html
@@ -6,24 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Homepage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
+    <link href="css/global.css" rel="stylesheet">
+    <link href="css/homepage.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/afab80bb2e.js" crossorigin="anonymous"></script>
   </head>
 
 
   <body>
-    <ul class="nav justify-content-end">
-      <li class="nav-item">
-        <a class="nav-link" href="https://tianalrivera.com">Homepage</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://tianalrivera.com/Experience">Experience</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://tianalrivera.com/Portfolio">Portfolio</a>
-    </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <img src="MARK.jpg" alt="mark lee" width="50" height="60"> 
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="experience.html">Experience</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="portfolio.html">
+                Project Portfolio
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="creatorconnect.html">Creator Connect</a></li>
+                <li><a class="dropdown-item" href="drawdrills.html">Draw Drills</a></li>
+                <li><a class="dropdown-item" href="ia.html">Interactive Resume</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
- 
-
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div>
+            <img src="MARK.jpg" alt="mark lee" width="500" height="600">
+          </div>
+          <br>
+          <a href="https://www.linkedin.com/in/tianalrivera"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+          <a href="https://github.com/tlr20"><i class="fa-brands fa-github fa-2xl"></i></a> 
+          <a href="mailto:tialriv@gmail.com"><i class="fa-solid fa-envelope fa-2xl"></i></a>
+        </div>
+        <div class="col text-center">
+          <h3>
+            Tiana
+            <small class="text-body-secondary">(T)</small>
+            Rivera
+          </h3>
+          <p>
+            I’m a creative and extroverted front-end developer who has a passion for fashion and loves cats.
+            I love working with technology and specialize in front end development and troubleshooting. 
+            Feel free to look around my website to see some of my credentials and projects I am working on!
+          </p>
+        </div>
+      </div>
+    </div>
+    <br>
+    <footer>
+      <p>Author: Tiana Rivera</p>
+    </footer> 
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 
