--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Homepage</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Moirai+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="css/global.css" rel="stylesheet">
     <link href="css/homepage.css" rel="stylesheet">
@@ -13,18 +16,18 @@
 
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <img src="MARK.jpg" alt="mark lee" width="50" height="60"> 
+    <nav class="navbar navbar-expand-lg" style="background-color: #ac9a83;">
+      <div class="container-fluid"> 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <a class="navbar-brand" style="color: #543D31" href="#">ฅ^•ﻌ•^ฅ</a>    
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item"> 
               <a class="nav-link" href="experience.html">Experience</a>
             </li>
             <li class="nav-item dropdown">
@@ -44,34 +47,34 @@
 
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col text-center">
           <div>
-            <img src="MARK.jpg" alt="mark lee" width="500" height="600">
+            <img id="tlr" src="images/tianarivera.jpg" alt="me" width="420" height="450">
           </div>
           <br>
           <a href="https://www.linkedin.com/in/tianalrivera"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
           <a href="https://github.com/tlr20"><i class="fa-brands fa-github fa-2xl"></i></a> 
           <a href="mailto:tialriv@gmail.com"><i class="fa-solid fa-envelope fa-2xl"></i></a>
         </div>
-        <div class="col text-center">
-          <h3>
-            Tiana
-            <small class="text-body-secondary">(T)</small>
-            Rivera
-          </h3>
-          <p>
-            I’m a creative and extroverted front-end developer who has a passion for fashion and loves cats.
-            I love working with technology and specialize in front end development and troubleshooting. 
-            Feel free to look around my website to see some of my credentials and projects I am working on!
-          </p>
+        <div class="col position-relative">
+          <div class="flip-card position-absolute start-50 translate-middle-x">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <p class="title">Welcome To My Website!</p>
+                    <p>Hover Me For My Introduction</p>
+                </div>
+                <div class="flip-card-back">
+                    <p class="title">I'm Tiana Rivera</p>
+                    <p class="intro">A creative and extroverted front-end developer who has a passion for fashion and cats. I love working with technology
+                      specializing in front-end development and troubleshooting. I’m passionate, motivated and I enjoy working with others. 
+                      Feel free to look around my website to see some of my credentials and projects I am working on!
+                    </p>
+                </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <br>
-    <footer>
-      <p>Author: Tiana Rivera</p>
-    </footer> 
-    
+    </div>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 
