--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="flip-card-inner">
                 <div class="flip-card-front">
                     <p class="title">Welcome To My Website!</p>
-                    <p>Hover Me For My Introduction</p>
+                    <p>Hover Here For My Introduction</p>
                 </div>
                 <div class="flip-card-back">
                     <p class="title">I'm Tiana Rivera</p>
