--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item"> 
-              <a class="nav-link" href="experience.html">Experience</a>
+              <a class="nav-link" href="experience">Experience</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="portfolio.html">
+              <a class="nav-link dropdown-toggle" href="portfolio">
                 Project Portfolio
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="creatorconnect.html">Creator Connect</a></li>
-                <li><a class="dropdown-item" href="drawdrills.html">Draw Drills</a></li>
-                <li><a class="dropdown-item" href="ia.html">Interactive Resume</a></li>
+                <li><a class="dropdown-item" href="creatorconnect">Creator Connect</a></li>
+                <li><a class="dropdown-item" href="drawdrills">Draw Drills</a></li>
+                <li><a class="dropdown-item" href="ia">Interactive Resume</a></li>
               </ul>
             </li>
           </ul>
