experience page changes

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <a class="navbar-brand" style="color: #543D31" href="#">ฅ^•ﻌ•^ฅ</a>    
+            <a class="navbar-brand" style="color: #543D31" href="/">ฅ^•ﻌ•^ฅ</a>    
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item"> 
               <a class="nav-link" href="experience">Experience</a>
