--- a/experience.html
+++ b/experience.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
-
+  
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Homepage</title>
+    <title>Experience</title>
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -14,11 +14,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Moirai+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="css/global.css" rel="stylesheet">
-    <link href="css/homepage.css" rel="stylesheet">
+    <link href="css/experience.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/afab80bb2e.js" crossorigin="anonymous"></script>
   </head>
-
-
+  
+  
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #ac9a83;">
       <div class="container-fluid"> 
@@ -27,12 +27,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <a class="navbar-brand" style="color: #543D31" href="#">ฅ^•ﻌ•^ฅ</a>    
+            <a class="navbar-brand" style="color: #543D31" href="/">ฅ^•ﻌ•^ฅ</a>    
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item"> 
-              <a class="nav-link" href="experience">Experience</a>
+              <a class="nav-link active" aria-current="page" href="experience">Experience</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="portfolio">
@@ -49,4 +49,5 @@
       </div>
     </nav>
   </body>
+
 </html>
