--- a/experience.html
+++ b/experience.html
@@ -29,10 +29,10 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <a class="navbar-brand" style="color: #543D31" href="/">ฅ^•ﻌ•^ฅ</a>    
             <li class="nav-item">
-              <a class="nav-link active" href="/">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item"> 
-              <a class="nav-link" aria-current="page" href="experience">Experience</a>
+              <a class="nav-link active" aria-current="page" href="experience">Experience</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="portfolio">
