--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Moirai+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="css/global.css" rel="stylesheet">
-    <link href="css/experience.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/afab80bb2e.js" crossorigin="anonymous"></script>
   </head>
   
