Portfolio page changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,15 +34,10 @@
             <li class="nav-item"> 
               <a class="nav-link" aria-current="page" href="experience">Experience</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link active dropdown-toggle" aria-current="page" href="portfolio">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="portfolio">
                 Project Portfolio
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="creatorconnect">Creator Connect</a></li>
-                <li><a class="dropdown-item" href="drawdrills">Draw Drills</a></li>
-                <li><a class="dropdown-item" href="ia">Interactive Resume</a></li>
-              </ul>
             </li>
           </ul>
         </div>
