--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <p class="title">I'm Tiana Rivera</p>
                     <p class="intro">A creative and extroverted front-end developer who has a passion for fashion and loves cats. I love working with technology
                       specializing in front-end development and troubleshooting. I’m passionate, motivated and I enjoy working with others. 
-                      Feel free to look around my website to see some of my credentials and projects I'm working on! You can also click <a href=TianaRivera2023Resume.pdf>HERE</a> for my resume.
+                      Feel free to look around my website to see some of my credentials and projects I'm working on! You can also click <a href=images/TianaRivera2023Resume.jpg>HERE</a> for my resume.
                     </p>
                 </div>
             </div>
